Add necklace and bracelet product information with search support

--- a/shop.html
+++ b/shop.html
@@ -985,8 +985,8 @@
                     </div>
                     <div class='product-info'>
                         <h3 class='product-title'>Necklace 1</h3>
-                        <p class='product-description'>Product description</p>
-                        <div class='product-price'>\.00</div>
+                        <p class='product-description'>Sold Out</p>
+                        <div class='product-price'>Unavailable</div>
                         <a href='YOUR_SHOPIFY_CHECKOUT_LINK_NECKLACE1' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
                     </div>
                 </div>
@@ -997,8 +997,8 @@
                     </div>
                     <div class='product-info'>
                         <h3 class='product-title'>Necklace 2</h3>
-                        <p class='product-description'>Product description</p>
-                        <div class='product-price'>\.00</div>
+                        <p class='product-description'>Sold Out</p>
+                        <div class='product-price'>Unavailable</div>
                         <a href='YOUR_SHOPIFY_CHECKOUT_LINK_NECKLACE2' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
                     </div>
                 </div>
@@ -1009,8 +1009,8 @@
                     </div>
                     <div class='product-info'>
                         <h3 class='product-title'>Necklace 3</h3>
-                        <p class='product-description'>Product description</p>
-                        <div class='product-price'>\.00</div>
+                        <p class='product-description'>Sold Out</p>
+                        <div class='product-price'>Unavailable</div>
                         <a href='YOUR_SHOPIFY_CHECKOUT_LINK_NECKLACE3' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
                     </div>
                 </div>
@@ -1021,8 +1021,8 @@
                     </div>
                     <div class='product-info'>
                         <h3 class='product-title'>Necklace 4</h3>
-                        <p class='product-description'>Product description</p>
-                        <div class='product-price'>\.00</div>
+                        <p class='product-description'>Sold Out</p>
+                        <div class='product-price'>Unavailable</div>
                         <a href='YOUR_SHOPIFY_CHECKOUT_LINK_NECKLACE4' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
                     </div>
                 </div>
@@ -1039,9 +1039,9 @@
                         <img loading='lazy' src='images/bracelet1.png' alt='Bracelet 1'>
                     </div>
                     <div class='product-info'>
-                        <h3 class='product-title'>Bracelet 1</h3>
-                        <p class='product-description'>Product description</p>
-                        <div class='product-price'>\.00</div>
+                        <h3 class='product-title'>925 Solid Sterling Silver Italian Popcorn Chain Bracelet With CZ Jaguar Head</h3>
+                        <p class='product-description'>Hand-polished hand-engraved popcorn chain with cubic zirconia jaguar head pendant, lobster closure, 7.5 inches</p>
+                        <div class='product-price'>$150.00</div>
                         <a href='YOUR_SHOPIFY_CHECKOUT_LINK_BRACELET1' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
                     </div>
                 </div>
@@ -1052,8 +1052,8 @@
                     </div>
                     <div class='product-info'>
                         <h3 class='product-title'>Bracelet 2</h3>
-                        <p class='product-description'>Product description</p>
-                        <div class='product-price'>\.00</div>
+                        <p class='product-description'>Sold Out</p>
+                        <div class='product-price'>Unavailable</div>
                         <a href='YOUR_SHOPIFY_CHECKOUT_LINK_BRACELET2' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
                     </div>
                 </div>
