Unify footer across all pages using home footer

--- a/shop-now.html
+++ b/shop-now.html
@@ -129,7 +129,7 @@
       <div class="footer-content">
         <div class="footer-col">
           <h3>I&Y JEWLZ</h3>
-          <p>Your trusted source for premium lab-grown diamond jewelry. We offer the finest selection of rings, necklaces, bracelets, pendants, earrings, watches, and vintage pieces.</p>
+          <p>Your trusted source for premium lab-grown diamond jewelry and professional jewelry repair services. We offer the finest selection of rings, necklaces, bracelets, pendants, earrings, watches, and vintage pieces. Expert jewelry repair and restoration available.</p>
         </div>
         <div class="footer-col">
           <h4>Quick Links</h4>
@@ -149,9 +149,9 @@
           </ul>
         </div>
         <div class="footer-col">
-          <h4>Have Questions?</h4>
-          <p>Our team is available to assist you with any inquiries about our lab-grown diamonds and premium jewelry collections.</p>
-          <a href="contact.html" class="btn btn-small">Contact Us</a>
+          <h4>Jewelry Repair Services</h4>
+          <p>Professional jewelry repair, ring resizing, stone setting, watch repair, and restoration services. Our expert jewelers are here to help with all your jewelry repair needs.</p>
+          <a href="contact.html" class="btn btn-small">Get a Repair Quote</a>
         </div>
       </div>
       <div class="trust-badges">
