--- a/shop.html
+++ b/shop.html
@@ -143,7 +143,7 @@
                         <h3 class='product-title'>Invicta Terra Retro Military I Force Men's Watch</h3>
                         <p class='product-description'>45mm stainless steel case, black dial, quartz movement, 100m water resistance, black leather band, Arabic numerals, chronograph</p>
                         <div class='product-price'>$150.00</div>
-                        <a href='YOUR_SHOPIFY_CHECKOUT_LINK_WATCH3' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
+                        <a href='https://fvefz1-zq.myshopify.com/cart/44137088778263:1' class='btn btn-primary btn-block' target='_blank' rel='noopener'>Buy Now</a>
                     </div>
                 </div>
 
