Revert "Add Shopify checkout links for watches 4,7,8,9,10,11,13,14"
This reverts commit 497a563280953fe2b5b781955d3182ad6558238e.

--- a/shop.html
+++ b/shop.html
@@ -151,7 +151,11 @@
                     <div class='product-image'>
                         <img loading='lazy' src='images/watch4.png' alt='Watch 4'>
                     </div>
-                        <a href='https://fvefz1-zq.myshopify.com/cart/44137137340439:1' class='btn btn-primary btn-block' target='_blank' rel='noopener'>Buy Now</a>
+                    <div class='product-info'>
+                        <h3 class='product-title'>Casio STEP TRACKER Running Watch (Black)</h3>
+                        <p class='product-description'>Digital rectangle, quartz battery, 100m water resistance, alarm, backlight, 12/24h, date, resin case, rubber strap (WS2000H1AJH)</p>
+                        <div class='product-price'>$60.00</div>
+                        <a href='YOUR_SHOPIFY_CHECKOUT_LINK_WATCH4' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
                     </div>
                 </div>
 
@@ -165,7 +169,7 @@
                         <h3 class='product-title'>Armitron Men's Multi-Function Dial Black Mesh Bracelet Watch</h3>
                         <p class='product-description'>Round analog, quartz battery, multi-function dial, black mesh bracelet</p>
                         <div class='product-price'>$85.00</div>
-                        <a href='https://fvefz1-zq.myshopify.com/cart/44137138814999:1' class='btn btn-primary btn-block' target='_blank' rel='noopener'>Buy Now</a>
+                        <a href='YOUR_SHOPIFY_CHECKOUT_LINK_WATCH7' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
                     </div>
                 </div>
 
@@ -177,7 +181,7 @@
                         <h3 class='product-title'>ELGIN Two-Tone Silver Dial Watch and Bracelet Set</h3>
                         <p class='product-description'>Two-tone stainless steel watch and matching bracelet set, analog display</p>
                         <div class='product-price'>$120.00</div>
-                        <a href='https://fvefz1-zq.myshopify.com/cart/44137139404823:1' class='btn btn-primary btn-block' target='_blank' rel='noopener'>Buy Now</a>
+                        <a href='YOUR_SHOPIFY_CHECKOUT_LINK_WATCH8' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
                     </div>
                 </div>
 
@@ -189,7 +193,7 @@
                         <h3 class='product-title'>Elgin Men's Gold-Tone Date Rectangle Quartz Watch</h3>
                         <p class='product-description'>Rectangle case, quartz movement, date, 100m water resistance</p>
                         <div class='product-price'>$120.00</div>
-                        <a href='https://fvefz1-zq.myshopify.com/cart/44137140027415:1' class='btn btn-primary btn-block' target='_blank' rel='noopener'>Buy Now</a>
+                        <a href='YOUR_SHOPIFY_CHECKOUT_LINK_WATCH9' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
                     </div>
                 </div>
 
@@ -201,7 +205,7 @@
                         <h3 class='product-title'>Elgin EG7041 Diamond Round Analog Champagne & Silver Tone</h3>
                         <p class='product-description'>Quartz movement, diamond accents, round case, water resistant</p>
                         <div class='product-price'>$100.00</div>
-                        <a href='https://fvefz1-zq.myshopify.com/checkouts/cn/hWN6sTyWM3jJOL2msfYM6AyY/en-us?_r=AQABQLA2HQPLIcHBqKRcHcNuksjVQN8d89DpHB3G6wOMimk&cart_link_id=gL4c37r6' class='btn btn-primary btn-block' target='_blank' rel='noopener'>Buy Now</a>
+                        <a href='YOUR_SHOPIFY_CHECKOUT_LINK_WATCH10' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
                     </div>
                 </div>
 
@@ -213,7 +217,7 @@
                         <h3 class='product-title'>Bering Men's Wristwatch Slim Classic</h3>
                         <p class='product-description'>Slim 6mm stainless steel case, sapphire crystal, leather band, 50m water resistance</p>
                         <div class='product-price'>$150.00</div>
-                        <a href='https://fvefz1-zq.myshopify.com/cart/44137143533591:1' class='btn btn-primary btn-block' target='_blank' rel='noopener'>Buy Now</a>
+                        <a href='YOUR_SHOPIFY_CHECKOUT_LINK_WATCH11' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
                     </div>
                 </div>
 
@@ -227,7 +231,7 @@
                         <h3 class='product-title'>Timex Women's Essex Avenue Two-Tone Expansion (TW2P67200)</h3>
                         <p class='product-description'>Women's two-tone stainless steel expansion band, analog display</p>
                         <div class='product-price'>$40.00</div>
-                        <a href='https://fvefz1-zq.myshopify.com/cart/44137144090647:1' class='btn btn-primary btn-block' target='_blank' rel='noopener'>Buy Now</a>
+                        <a href='YOUR_SHOPIFY_CHECKOUT_LINK_WATCH13' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
                     </div>
                 </div>
 
@@ -239,7 +243,7 @@
                         <h3 class='product-title'>Disney Mickey Hands Black Metal Band Watch</h3>
                         <p class='product-description'>Mickey-themed white dial, black metal band, casual style</p>
                         <div class='product-price'>$25.00</div>
-                        <a href='https://fvefz1-zq.myshopify.com/cart/44137146646551:1' class='btn btn-primary btn-block' target='_blank' rel='noopener'>Buy Now</a>
+                        <a href='YOUR_SHOPIFY_CHECKOUT_LINK_WATCH14' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
                     </div>
                 </div>
 
