Add Shopify links for watches 16,17,29,44,45,47 (link-only)

--- a/shop.html
+++ b/shop.html
@@ -257,7 +257,7 @@
                         <h3 class='product-title'>CASIO G-SHOCK DW9052-1V Black Digital</h3>
                         <p class='product-description'>Shock-resistant, 200m water resistance, resin case and band, digital display</p>
                         <div class='product-price'>$150.00</div>
-                        <a href='YOUR_SHOPIFY_CHECKOUT_LINK_WATCH16' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
+                        <a href='https://fvefz1-zq.myshopify.com/cart/44137179611159:1' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
                     </div>
                 </div>
 
@@ -269,7 +269,7 @@
                         <h3 class='product-title'>Casio Classic Analog Black Resin, White Dial</h3>
                         <p class='product-description'>Quartz movement, 34mm case, water resistant, black resin strap</p>
                         <div class='product-price'>$40.00</div>
-                        <a href='YOUR_SHOPIFY_CHECKOUT_LINK_WATCH17' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
+                        <a href='https://fvefz1-zq.myshopify.com/cart/44137199435799:1' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
                     </div>
                 </div>
 
@@ -363,7 +363,7 @@
                         <h3 class='product-title'>Timex Ironman Classic Essential</h3>
                         <p class='product-description'>Digital display, 100m water resistance, resin band, classic style</p>
                         <div class='product-price'>$45.00</div>
-                        <a href='YOUR_SHOPIFY_CHECKOUT_LINK_WATCH29' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
+                        <a href='https://fvefz1-zq.myshopify.com/cart/44137270050839:1' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
                     </div>
                 </div>
 
@@ -463,7 +463,7 @@
                         <h3 class='product-title'>Timex Ironman Classic Essential</h3>
                         <p class='product-description'>Digital, 100m water resistance, resin band, classic style</p>
                         <div class='product-price'>$50.00</div>
-                        <a href='YOUR_SHOPIFY_CHECKOUT_LINK_WATCH44' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
+                        <a href='https://fvefz1-zq.myshopify.com/cart/44137270050839:1' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
                     </div>
                 </div>
 
@@ -475,7 +475,7 @@
                         <h3 class='product-title'>CASIO G-SHOCK DW9052-1V Black Digital</h3>
                         <p class='product-description'>Shock-resistant, 200m water resistance, resin case and band</p>
                         <div class='product-price'>$150.00</div>
-                        <a href='YOUR_SHOPIFY_CHECKOUT_LINK_WATCH45' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
+                        <a href='https://fvefz1-zq.myshopify.com/cart/44137179611159:1' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
                     </div>
                 </div>
 
@@ -489,7 +489,7 @@
                         <h3 class='product-title'>Casio Classic Analog Black Resin, White Dial</h3>
                         <p class='product-description'>Quartz movement, water resistant, black resin strap, white dial</p>
                         <div class='product-price'>$40.00</div>
-                        <a href='YOUR_SHOPIFY_CHECKOUT_LINK_WATCH47' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
+                        <a href='https://fvefz1-zq.myshopify.com/cart/44137199435799:1' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
                     </div>
                 </div>
 
