Add Shopify links for watches 20,21,23,26,27,28,32,35,36,41,42,43

--- a/shop.html
+++ b/shop.html
@@ -285,7 +285,7 @@
                         <h3 class='product-title'>Timex T20031 Easy Reader Men's Silvertone Expansion</h3>
                         <p class='product-description'>Indiglo, day/date, 35mm case, stretch bracelet, analog quartz</p>
                         <div class='product-price'>$40.00</div>
-                        <a href='YOUR_SHOPIFY_CHECKOUT_LINK_WATCH20' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
+                        <a href='https://fvefz1-zq.myshopify.com/cart/44137225158679:1' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
                     </div>
                 </div>
 
@@ -297,7 +297,7 @@
                         <h3 class='product-title'>Timex TW2V05600 Easy Reader Men's 2-Tone Expansion</h3>
                         <p class='product-description'>Indiglo backlight, date indicator, 35mm case, expansion band</p>
                         <div class='product-price'>$45.00</div>
-                        <a href='YOUR_SHOPIFY_CHECKOUT_LINK_WATCH21' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
+                        <a href='https://fvefz1-zq.myshopify.com/cart/44137225748503:1' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
                     </div>
                 </div>
 
@@ -311,7 +311,7 @@
                         <h3 class='product-title'>Casio MW-240-1EVEF Sports Analog Black Dial</h3>
                         <p class='product-description'>Quartz analog, WR 50m, plastic strap, sports style</p>
                         <div class='product-price'>$40.00</div>
-                        <a href='YOUR_SHOPIFY_CHECKOUT_LINK_WATCH23' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
+                        <a href='https://fvefz1-zq.myshopify.com/cart/44137235185687:1' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
                     </div>
                 </div>
 
@@ -327,7 +327,7 @@
                         <h3 class='product-title'>Timex Men's South Street Sport Stainless Steel Expansion</h3>
                         <p class='product-description'>36mm case, day/date, stainless steel expansion band, analog</p>
                         <div class='product-price'>$50.00</div>
-                        <a href='YOUR_SHOPIFY_CHECKOUT_LINK_WATCH26' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
+                        <a href='https://fvefz1-zq.myshopify.com/cart/44137242394647:1' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
                     </div>
                 </div>
 
@@ -339,7 +339,7 @@
                         <h3 class='product-title'>ELGIN Gunmetal Anadigi Dual-Time Watch with Crystals</h3>
                         <p class='product-description'>52mm round case, analog/digital dual time, crystal accents</p>
                         <div class='product-price'>$125.00</div>
-                        <a href='YOUR_SHOPIFY_CHECKOUT_LINK_WATCH27' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
+                        <a href='https://fvefz1-zq.myshopify.com/cart/44137249472535:1' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
                     </div>
                 </div>
 
@@ -351,7 +351,7 @@
                         <h3 class='product-title'>Elgin Two-Tone Crystal Accent Watch + Cross Bracelet Set</h3>
                         <p class='product-description'>Two-tone design, crystal accents, analog display, set includes bracelet</p>
                         <div class='product-price'>$70.00</div>
-                        <a href='YOUR_SHOPIFY_CHECKOUT_LINK_WATCH28' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
+                        <a href='https://fvefz1-zq.myshopify.com/cart/44137256615959:1' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
                     </div>
                 </div>
 
@@ -379,7 +379,7 @@
                         <h3 class='product-title'>Timex Kids Time Machines Elastic Watch (Butterfly)</h3>
                         <p class='product-description'>28mm case, teaching indices, nylon strap, water resistant</p>
                         <div class='product-price'>$20.00</div>
-                        <a href='YOUR_SHOPIFY_CHECKOUT_LINK_WATCH32' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
+                        <a href='https://fvefz1-zq.myshopify.com/cart/44137276833815:1' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
                     </div>
                 </div>
 
@@ -395,7 +395,7 @@
                         <h3 class='product-title'>Timex Men's Expedition Camper Gray Nylon Strap</h3>
                         <p class='product-description'>Expedition series, gray nylon strap, analog quartz</p>
                         <div class='product-price'>$50.00</div>
-                        <a href='YOUR_SHOPIFY_CHECKOUT_LINK_WATCH35' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
+                        <a href='https://fvefz1-zq.myshopify.com/cart/44137288630295:1' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
                     </div>
                 </div>
 
@@ -407,7 +407,7 @@
                         <h3 class='product-title'>Casio Analog Quartz Men's Watch</h3>
                         <p class='product-description'>Stainless steel bracelet, analog quartz, silver tone</p>
                         <div class='product-price'>$90.00</div>
-                        <a href='YOUR_SHOPIFY_CHECKOUT_LINK_WATCH36' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
+                        <a href='https://fvefz1-zq.myshopify.com/cart/44137306652695:1' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
                     </div>
                 </div>
 
@@ -427,7 +427,7 @@
                         <h3 class='product-title'>Timex Easy Reader Women's 2-Tone Expansion Indiglo</h3>
                         <p class='product-description'>25mm case, Indiglo backlight, date indicator, expansion band</p>
                         <div class='product-price'>$40.00</div>
-                        <a href='YOUR_SHOPIFY_CHECKOUT_LINK_WATCH41' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
+                        <a href='https://fvefz1-zq.myshopify.com/cart/44137323823127:1' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
                     </div>
                 </div>
 
@@ -439,7 +439,7 @@
                         <h3 class='product-title'>Timex Easy Reader Silvertone Expansion (38mm)</h3>
                         <p class='product-description'>Silvertone expansion band, 38mm case, analog quartz</p>
                         <div class='product-price'>$40.00</div>
-                        <a href='YOUR_SHOPIFY_CHECKOUT_LINK_WATCH42' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
+                        <a href='https://fvefz1-zq.myshopify.com/cart/44137327198231:1' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
                     </div>
                 </div>
 
@@ -451,7 +451,7 @@
                         <h3 class='product-title'>Timex Men's South Street Sport Stainless Steel Expansion</h3>
                         <p class='product-description'>36mm case, day/date, stainless steel expansion band</p>
                         <div class='product-price'>$50.00</div>
-                        <a href='YOUR_SHOPIFY_CHECKOUT_LINK_WATCH43' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
+                        <a href='https://fvefz1-zq.myshopify.com/cart/44137242394647:1' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
                     </div>
                 </div>
 
