Add Shopify checkout links for earrings and bracelet

--- a/shop.html
+++ b/shop.html
@@ -524,7 +524,7 @@
                         <h3 class='product-title'>10K Yellow Gold Heart Flower Studs</h3>
                         <p class='product-description'>Solid 10K yellow gold with cubic zirconia, screw-back closure</p>
                         <div class='product-price'>$50.00</div>
-                        <a href='YOUR_SHOPIFY_CHECKOUT_LINK_EARRING1' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
+                        <a href='https://fvefz1-zq.myshopify.com/cart/44137610084375:1' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
                     </div>
                 </div>
 
@@ -536,7 +536,7 @@
                         <h3 class='product-title'>925 Sterling Silver Bar Dangle Earrings</h3>
                         <p class='product-description'>Dainty linear bar design with hook closure, solid 925 sterling silver</p>
                         <div class='product-price'>$35.00</div>
-                        <a href='YOUR_SHOPIFY_CHECKOUT_LINK_EARRING2' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
+                        <a href='https://fvefz1-zq.myshopify.com/cart/44137610215447:1' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
                     </div>
                 </div>
 
@@ -548,7 +548,7 @@
                         <h3 class='product-title'>10K Yellow Gold Baby CZ Bar Studs</h3>
                         <p class='product-description'>Solid 10K yellow gold with cubic zirconia bars, screw-back closure</p>
                         <div class='product-price'>$50.00</div>
-                        <a href='YOUR_SHOPIFY_CHECKOUT_LINK_EARRING3' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
+                        <a href='https://fvefz1-zq.myshopify.com/cart/44137610313751:1' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
                     </div>
                 </div>
 
@@ -560,7 +560,7 @@
                         <h3 class='product-title'>925 Sterling Silver Peace Sign Studs</h3>
                         <p class='product-description'>Pavé CZ peace sign design, push-back closure, solid 925 sterling silver</p>
                         <div class='product-price'>$25.00</div>
-                        <a href='YOUR_SHOPIFY_CHECKOUT_LINK_EARRING4' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
+                        <a href='https://fvefz1-zq.myshopify.com/cart/44137610510359:1' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
                     </div>
                 </div>
 
@@ -574,7 +574,7 @@
                         <h3 class='product-title'>10K Yellow Gold Ribbon Bow Studs</h3>
                         <p class='product-description'>Solid 10K yellow gold with cubic zirconia bow design, screw-back closure</p>
                         <div class='product-price'>$50.00</div>
-                        <a href='YOUR_SHOPIFY_CHECKOUT_LINK_EARRING6' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
+                        <a href='https://fvefz1-zq.myshopify.com/cart/44137631612951:1' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
                     </div>
                 </div>
 
@@ -590,7 +590,7 @@
                         <h3 class='product-title'>10K Yellow Gold Heart CZ Studs</h3>
                         <p class='product-description'>Solid 10K yellow gold with cubic zirconia heart design, screw-back closure</p>
                         <div class='product-price'>$50.00</div>
-                        <a href='YOUR_SHOPIFY_CHECKOUT_LINK_EARRING9' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
+                        <a href='https://fvefz1-zq.myshopify.com/cart/44137631678487:1' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
                     </div>
                 </div>
 
@@ -602,7 +602,7 @@
                         <h3 class='product-title'>10K Yellow Gold Duck Stud Earrings</h3>
                         <p class='product-description'>Solid 10K yellow gold with cubic zirconia duck design, screw-back closure</p>
                         <div class='product-price'>$50.00</div>
-                        <a href='YOUR_SHOPIFY_CHECKOUT_LINK_EARRING10' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
+                        <a href='https://fvefz1-zq.myshopify.com/cart/44137631744023:1' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
                     </div>
                 </div>
 
@@ -618,7 +618,7 @@
                         <h3 class='product-title'>10K Yellow Gold Open Heart CZ Studs</h3>
                         <p class='product-description'>Solid 10K yellow gold with cubic zirconia open heart design, screw-back closure</p>
                         <div class='product-price'>$60.00</div>
-                        <a href='YOUR_SHOPIFY_CHECKOUT_LINK_EARRING13' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
+                        <a href='https://fvefz1-zq.myshopify.com/cart/44137631809559:1' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
                     </div>
                 </div>
 
@@ -647,7 +647,7 @@
                         <h3 class='product-title'>925 Solid Sterling Silver Italian Popcorn Chain Bracelet With CZ Jaguar Head</h3>
                         <p class='product-description'>Hand-polished hand-engraved popcorn chain with cubic zirconia jaguar head pendant, lobster closure, 7.5 inches</p>
                         <div class='product-price'>$150.00</div>
-                        <a href='YOUR_SHOPIFY_CHECKOUT_LINK_BRACELET1' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
+                        <a href='https://fvefz1-zq.myshopify.com/cart/44137634627607:1' class='btn btn-primary btn-block' target='_blank'>Buy Now</a>
                     </div>
                 </div>
 
