Fix and update search functionality with live results and better coverage

--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
                 <div class="drawer-content">
                     <div class="drawer-search" role="search">
                         <i class="fas fa-search"></i>
-                        <input type="text" placeholder="Search products..." autocomplete="off" />
+                        <input type="text" placeholder="Search jewelry..." autocomplete="off" />
                     </div>
                     <ul class="drawer-menu">
                         <li><a href="index.html">Home</a></li>
@@ -103,7 +103,7 @@
             </div>
             <div class="search-container">
                 <i class="fas fa-search search-icon"></i>
-                <input type="text" id="searchInput" placeholder="Search watches, earrings, necklaces, bracelets..." autocomplete="off">
+                <input type="text" id="searchInput" placeholder="Search rings, watches, earrings, necklaces, bracelets, silver, gold, diamonds..." autocomplete="off">
             </div>
             <div class="search-suggestions" id="searchSuggestions">
                 <div class="suggestions-list"></div>
