--- a/shop.html
+++ b/shop.html
@@ -86,7 +86,7 @@
                 </div>
                 <div class='search-container'>
                     <i class='fas fa-search search-icon'></i>
-                    <input type='text' id='searchInput' placeholder='Search watches, earrings, necklaces, bracelets...' autocomplete='off'>
+                    <input type='text' id='searchInput' placeholder='Search rings, watches, earrings, necklaces, bracelets, silver, gold...' autocomplete='off'>
                 </div>
                 <div class='search-suggestions' id='searchSuggestions'>
                     <div class='suggestions-list'></div>
@@ -96,7 +96,7 @@
                 </div>
                 <div class='search-empty' id='searchEmpty' style='display: none;'>
                     <i class='fas fa-search'></i>
-                    <p>No products found. Try searching for "watch", "necklace", "earring", or "bracelet"</p>
+                    <p>No products found. Try searching for "ring", "watch", "earring", "necklace", "bracelet", "gold", or "silver"</p>
                 </div>
             </div>
         </div>
